Modified to build and run on DiAL
Using Intel 18 compilers and MPI on DiAL, modules are loaded before
the make, the INCLUDE string is renamed to avoid a name clash, and
compiler options are changed in src/Makefile.

Gandalf builds and runs in serial and OpenMP modes. In MPI mode, the
disc.dat case runs but the GI_disc.dat case fails with a segfault
(both cases are run for only 10 time steps).

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,13 @@ toymain
 .settings
 Untitled.build
 gandalf
+
+# Dirac testing
+# Build logs
+*.log
+# Build reports
+*.optrpt
+# Result directories
+tests/*disc*.[0-9][0-9][0-9]
+# DiAL job output
+*.[eo][0-9][0-9][0-9][0-9][0-9]
