--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ gandalf
 *.log
 # Build reports
 *.optrpt
+# Installation
+bin/
 # Result directories
 tests/*disc*.[0-9][0-9][0-9]
 # DiAL job output
