Align to cache lines and include vectorisation
The last commit did NOT align the caches properly (counting FLOATS as
floats instead of doubles).  In fact, two cache lines are needed for
the cell traversal, so the unnatural ordering in the TreeCellBase
structure has been undone.

The Box structure and the BoxOverlap function have been changed have
cache alignment and vector alignment.  The BoxOverlap function is
still not optimal - it can just be: masked load of one 4-double
vector, masked load of the other, masked 4-double compare, transfer
result to general purpose register, test for non-zero.  I don't think
using 8-double vectors and shuffling things around will necessarily be
faster (I would think that the memory access is the slow step anyway).

Use OpenMP (running with one thread to test "serial" performance) to
get the simd directives.

--- a/src/Makefile
+++ b/src/Makefile
@@ -93,8 +93,7 @@ ifeq ($(MEASURE),true)
 ICCOPT += -D MEASURE
 
 # Reports
-#ICCOPT += -qopt-report=5 -qopt-report-phase=vec
-# -qopt-report-names=unmangled
+ICCOPT += -qopt-report=5 -qopt-report-phase=vec # -qopt-report-names=unmangled
 
 # Advisor
 # -vec is set by -O3
