--- a/src/Makefile
+++ b/src/Makefile
@@ -54,7 +54,7 @@ endif
 
 # Compiler mode flags
 # -------------------------------------------------------------------------------------------------
-# For Intel, look the assebly code with
+# For Intel, look at the assembly code with
 # -Fa -fsource-asm -fverbose-asm -qopt-report-embed -masm=intel
 
 ifeq ($(COMPILER_MODE),FAST)
