Switch off OpenMP
Switch off OpenMP and IPO, to be comparable with the
DiRAC_RSE-cache_group_together branch.

--- a/src/Makefile
+++ b/src/Makefile
@@ -54,6 +54,9 @@ endif
 
 # Compiler mode flags
 # -------------------------------------------------------------------------------------------------
+# For Intel, look at the assembly code with
+# -Fa -fsource-asm -fverbose-asm -qopt-report-embed -masm=intel
+
 ifeq ($(COMPILER_MODE),FAST)
 GCCOPT   += -O3 -ffast-math -fPIC -fno-exceptions -fno-rtti
 # -fast implies -static, which won't find, e.g., libm on DIaL.  And
@@ -64,7 +67,10 @@ GCCOPT   += -O3 -ffast-math -fPIC -fno-exceptions -fno-rtti
 # Switch on symbols so that gdb backtrace will work.  Switch on traps
 # until seg faults are found.
 # for testing the MPI problem ICCOPT   += -O3 -g -ipo -no-prec-div -fp-model fast=2 -xHost -fPIC -fno-exceptions -fp-trap=common
-ICCOPT   += -O3 -ipo -no-prec-div -fp-model fast=2 -xHost -fPIC -fno-exceptions -fno-rtti
+# Try without ipo, and show the assembly code; then it is clear what
+# the vectorisation is.
+#ICCOPT   += -O3 -ipo -no-prec-div -fp-model fast=2 -xHost -fPIC -fno-exceptions -fno-rtti
+ICCOPT   += -O3 -no-prec-div -fp-model fast=2 -xHost -fPIC -fno-exceptions -fno-rtti -Fa -masm=intel -fsource-asm -qopt-report-embed
 CLANGOPT += -O3 -ffast-math -fPIC
 else ifeq ($(COMPILER_MODE),DEBUG)
 GCCOPT   += -Og -g -pg -Wall -Wno-unknown-pragmas -Wno-reorder -fbounds-check -fPIC  -fno-rtti #-fprofile-arcs -ftest-coverage
@@ -82,6 +88,8 @@ ifeq ($(OPENMP),1)
 GCCOPT   += -fopenmp
 ICCOPT   += -qopenmp
 CLANGOPT += -fopenmp -DOPENMP
+else
+ICCOPT   += -Wno-unknown-pragmas
 endif
 
 # Need to know if MPI is used before possibly adding ITAC
@@ -387,6 +395,7 @@ clean ::
 	\rm -f ../analysis/swig_generated/SphSim.py
 	\rm -f *.d
 	\rm -f *.optrpt
+	\rm -f *.s
 	\rm -f *.dbg
 	\rm -f gandalf
 
