--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,15 @@ gandalf
 *.log
 # Build reports
 *.optrpt
+*.s
 # Installation
 bin/
 # Result directories
 tests/*disc*.[0-9][0-9][0-9]
+tests/*disc*.[0-9][0-9][0-9][a-z]
+tests/*disc*.[0-9][0-9][0-9]
 # DiAL job output
-*.[eo][0-9][0-9][0-9][0-9][0-9]
+*.[eo][0-9][0-9][0-9][0-9][0-9][0-9]
+# Emacs files
+BROWSE
+TAGS
