Use a lambda for casts to Intel vector types
Use a lambda to modernise the casts to Intel vector types
(i.e. __mm256d).

Note that using Intel intrinsics does not speed-up BoxOverlap at all.

--- a/src/Makefile
+++ b/src/Makefile
@@ -55,7 +55,7 @@ endif
 # Compiler mode flags
 # -------------------------------------------------------------------------------------------------
 # For Intel, look at the assembly code with
-# -Fa -fsource-asm -fverbose-asm -qopt-report-embed -masm=intel
+# -Fa -fsource-asm -qopt-report-embed -masm=intel
 
 ifeq ($(COMPILER_MODE),FAST)
 GCCOPT   += -O3 -ffast-math -fPIC -fno-exceptions -fno-rtti
