--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,12 @@ bin/
 # Result directories
 tests/*disc*.[0-9][0-9][0-9]
 tests/*disc*.[0-9][0-9][0-9][a-z]
-tests/*disc*.[0-9][0-9][0-9]
+tests/*disc*.[0-9][0-9][0-9].[a-zA-Z0-9]*
 # DiAL job output
 *.[eo][0-9][0-9][0-9][0-9][0-9][0-9]
 # Emacs files
 BROWSE
 TAGS
+
+# Other
+vtune2018
