--- a/src/Makefile
+++ b/src/Makefile
@@ -57,13 +57,6 @@ endif
 # For Intel, look at the assembly code with
 # -Fa -fsource-asm -qopt-report-embed -masm=intel
 
-# I'm not sure whether to do this (or even c++11) - there are many
-# changes from the default of -std=gnu++98:  1998 ISO C++ standard
-# plus GNU* extensions.  Amongst changes are the pow function, but
-# kernels are tabulated, once, so the speed of pow is not important.
-#ICCOPT   += -std=c++17
-
-
 ifeq ($(COMPILER_MODE),FAST)
 GCCOPT   += -O3 -ffast-math -fPIC -fno-exceptions -fno-rtti
 # -fast implies -static, which won't find, e.g., libm on DIaL.  And
@@ -74,10 +67,11 @@ GCCOPT   += -O3 -ffast-math -fPIC -fno-exceptions -fno-rtti
 # Switch on symbols so that gdb backtrace will work.  Switch on traps
 # until seg faults are found.
 # for testing the MPI problem ICCOPT   += -O3 -g -ipo -no-prec-div -fp-model fast=2 -xHost -fPIC -fno-exceptions -fp-trap=common
-# Try without ipo, and show the assembly code; then it is clear what
+# with IPO ICCOPT   += -O3 -ipo -no-prec-div -fp-model fast=2 -xHost -fPIC -fno-exceptions -fno-rtti
+# Try without IPO, and show the assembly code; then it is clear what
 # the vectorisation is.
-#ICCOPT   += -O3 -no-prec-div -fp-model fast=2 -xHost -fPIC -fno-exceptions -fno-rtti -Fa -masm=intel -fsource-asm -qopt-report-embed
-ICCOPT   += -O3 -ipo -no-prec-div -fp-model fast=2 -xHost -fPIC -fno-exceptions -fno-rtti
+# And without IPO is about 5% faster than with IPO.
+ICCOPT   += -O3 -no-prec-div -fp-model fast=2 -xHost -fPIC -fno-exceptions -fno-rtti -Fa -masm=intel -fsource-asm -qopt-report-embed
 CLANGOPT += -O3 -ffast-math -fPIC
 else ifeq ($(COMPILER_MODE),DEBUG)
 GCCOPT   += -Og -g -pg -Wall -Wno-unknown-pragmas -Wno-reorder -fbounds-check -fPIC  -fno-rtti #-fprofile-arcs -ftest-coverage
